Refactor ChatModelProvider implementations to extend AbstractChatModelProvider
- All 6 providers now extend AbstractChatModelProvider base class
- Removed duplicate chatModelProperties field and deriveTimeoutSetting() method
- Constructors now call super() to initialize base class
- Also fixed Java 17 compatibility issues (List.getFirst/addFirst, pattern matching)

Co-authored-by: maff <27403+maff@users.noreply.github.com>